tests/ui/attributes/attr-on-mac-call.stderr
error: the `sanitize` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:77:7
   |
LL |     #[sanitize(address = "off")]
   |       ^^^^^^^^
   |
   = help: the `sanitize` attribute can be applied to crates, functions, impl blocks, modules, and statics
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error[E0658]: SIMD types are experimental and possibly buggy
  --> $DIR/attr-on-mac-call.rs:106:12
   |
LL |     #[repr(simd)]
   |            ^^^^
   |
   = note: see issue #27731 <https://github.com/rust-lang/rust/issues/27731> for more information
   = help: add `#![feature(repr_simd)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: the `repr(simd)` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:106:7
   |
LL |     #[repr(simd)]
   |       ^^^^^^^^^^
   |
   = help: the `repr(simd)` attribute can only be applied to structs
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: crate-level attribute should be an inner attribute: add an exclamation mark: `#![register_tool]`
  --> $DIR/attr-on-mac-call.rs:110:5
   |
LL |     #[register_tool(xyz)]
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
note: this attribute does not have an `!`, which means it is applied to this macro call
  --> $DIR/attr-on-mac-call.rs:112:5
   |
LL |     unreachable!();
   |     ^^^^^^^^^^^^^^

warning: the `export_name` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:8:7
   |
LL |     #[export_name = "x"]
   |       ^^^^^^^^^^^
   |
   = help: the `export_name` attribute can be applied to functions and statics
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute
note: the lint level is defined here
  --> $DIR/attr-on-mac-call.rs:3:9
   |
LL | #![warn(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

warning: the `naked` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:11:14
   |
LL |     #[unsafe(naked)]
   |              ^^^^^
   |
   = help: the `naked` attribute can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `track_caller` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:14:7
   |
LL |     #[track_caller]
   |       ^^^^^^^^^^^^
   |
   = help: the `track_caller` attribute can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `used` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:17:7
   |
LL |     #[used]
   |       ^^^^
   |
   = help: the `used` attribute can only be applied to statics
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `target_feature` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:20:7
   |
LL |     #[target_feature(enable = "x")]
   |       ^^^^^^^^^^^^^^
   |
   = help: the `target_feature` attribute can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `deprecated` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:23:7
   |
LL |     #[deprecated]
   |       ^^^^^^^^^^
   |
   = help: the `deprecated` attribute can be applied to associated consts, associated types, constants, crates, data types, enum variants, foreign statics, functions, inherent impl blocks, macro defs, modules, statics, struct fields, traits, type aliases, and use statements
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `inline` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:26:7
   |
LL |     #[inline]
   |       ^^^^^^
   |
   = help: the `inline` attribute can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `link_name` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:29:7
   |
LL |     #[link_name = "x"]
   |       ^^^^^^^^^
   |
   = help: the `link_name` attribute can be applied to foreign functions and foreign statics
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `link_section` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:32:7
   |
LL |     #[link_section = "__TEXT,__text"]
   |       ^^^^^^^^^^^^
   |
   = help: the `link_section` attribute can be applied to functions and statics
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `link_ordinal` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:35:7
   |
LL |     #[link_ordinal(42)]
   |       ^^^^^^^^^^^^
   |
   = help: the `link_ordinal` attribute can be applied to foreign functions and foreign statics
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `non_exhaustive` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:38:7
   |
LL |     #[non_exhaustive]
   |       ^^^^^^^^^^^^^^
   |
   = help: the `non_exhaustive` attribute can be applied to data types and enum variants
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `proc_macro` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:41:7
   |
LL |     #[proc_macro]
   |       ^^^^^^^^^^
   |
   = help: the `proc_macro` attribute can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `cold` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:44:7
   |
LL |     #[cold]
   |       ^^^^
   |
   = help: the `cold` attribute can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `no_mangle` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:47:7
   |
LL |     #[no_mangle]
   |       ^^^^^^^^^
   |
   = help: the `no_mangle` attribute can be applied to functions and statics
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `deprecated` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:50:7
   |
LL |     #[deprecated]
   |       ^^^^^^^^^^
   |
   = help: the `deprecated` attribute can be applied to associated consts, associated types, constants, crates, data types, enum variants, foreign statics, functions, inherent impl blocks, macro defs, modules, statics, struct fields, traits, type aliases, and use statements
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `automatically_derived` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:53:7
   |
LL |     #[automatically_derived]
   |       ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: the `automatically_derived` attribute can only be applied to trait impl blocks
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `macro_use` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:56:7
   |
LL |     #[macro_use]
   |       ^^^^^^^^^
   |
   = help: the `macro_use` attribute can be applied to extern crates and modules
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `must_use` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:59:7
   |
LL |     #[must_use]
   |       ^^^^^^^^
   |
   = help: the `must_use` attribute can be applied to data types, functions, and traits
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `no_implicit_prelude` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:62:7
   |
LL |     #[no_implicit_prelude]
   |       ^^^^^^^^^^^^^^^^^^^
   |
   = help: the `no_implicit_prelude` attribute can be applied to crates and modules
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `path` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:65:7
   |
LL |     #[path = ""]
   |       ^^^^
   |
   = help: the `path` attribute can only be applied to modules
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `ignore` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:68:7
   |
LL |     #[ignore]
   |       ^^^^^^
   |
   = help: the `ignore` attribute can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `should_panic` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:71:7
   |
LL |     #[should_panic]
   |       ^^^^^^^^^^^^
   |
   = help: the `should_panic` attribute can only be applied to functions
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `link_name` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:74:7
   |
LL |     #[link_name = "x"]
   |       ^^^^^^^^^
   |
   = help: the `link_name` attribute can be applied to foreign functions and foreign statics
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `repr()` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:81:7
   |
LL |     #[repr()]
   |       ^^^^^^
   |
   = help: the `repr()` attribute can only be applied to data types
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: unused attribute
  --> $DIR/attr-on-mac-call.rs:81:5
   |
LL |     #[repr()]
   |     ^^^^^^^^^ help: remove this attribute
   |
   = note: using `repr` with an empty list has no effect

warning: the `repr(u8)` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:86:7
   |
LL |     #[repr(u8)]
   |       ^^^^^^^^
   |
   = help: the `repr(u8)` attribute can only be applied to enums
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `repr(align(...))` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:90:7
   |
LL |     #[repr(align(8))]
   |       ^^^^^^^^^^^^^^
   |
   = help: the `repr(align(...))` attribute can only be applied to data types
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `repr(packed)` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:94:7
   |
LL |     #[repr(packed)]
   |       ^^^^^^^^^^^^
   |
   = help: the `repr(packed)` attribute can only be applied to data types
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `repr(C)` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:98:7
   |
LL |     #[repr(C)]
   |       ^^^^^^^
   |
   = help: the `repr(C)` attribute can only be applied to data types
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

warning: the `repr(Rust)` attribute cannot be used on macro calls
  --> $DIR/attr-on-mac-call.rs:102:7
   |
LL |     #[repr(Rust)]
   |       ^^^^^^^^^^
   |
   = help: the `repr(Rust)` attribute can only be applied to data types
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: placing this attribute on a macro invocation does nothing even if the macro expands to what would be a valid target for the attribute

error: aborting due to 4 previous errors; 30 warnings emitted

For more information about this error, try `rustc --explain E0658`.
